--- a/config.json
+++ b/config.json
@@ -12,8 +12,8 @@
 	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-	"nickNameBot": "Bot name",
-	"prefix": "/",
+	"nickNameBot": "𝑯𝒖𝒓𝒂𝒊𝒓𝒂_𝒃𝒐𝒕 ∰∛",
+	"prefix": ",",
 	"adminOnly": {
 		"enable": false,
 		"ignoreCommand": []
