--- a/config.json
+++ b/config.json
@@ -12,13 +12,13 @@
 	"antiInbox": false,
 	"language": "en",
 	"notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-	"nickNameBot": "Bot name",
-	"prefix": "/",
+	"nickNameBot": "𝑯𝑼𝑹𝑨𝑰𝑹𝑨_𝑩𝑶𝑻",
+	"prefix": ".",
 	"adminOnly": {
 		"enable": false,
 		"ignoreCommand": []
 	},
-	"adminBot": ["100051997177668","61573546232273","100069254151118","61551386306924","61572839167524"],
+	"adminBot": ["100078792977084"],
 	"whiteListMode": {
 		"enable": false,
 		"whiteListIds": [],
